objects/SFDC_Batch_Interface__c.object
<CustomObject>
    <description>Batch Interfaces Load history</description>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <description>Batch Id</description>
        <externalId>true</externalId>
        <label>Batch Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Error messages if any</description>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <description>Instance name</description>
        <label>Instance</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interface_Name__c</fullName>
        <description>Name of Interface</description>
        <label>Interface Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <label>Job Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Load_Started_time__c</fullName>
        <label>Load Started time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Load_Startus__c</fullName>
        <label>Load Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Time__c</fullName>
        <formula>(Updated_Time__c  - Load_Started_time__c) * 24 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Run Time (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sys_date__c</fullName>
        <description>Current system timestamp</description>
        <formula>Now()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sys_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>System_Timestamp__c</fullName>
        <description>Target system Timestamp</description>
        <label>System Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Updated_Time__c</fullName>
        <label>Updated Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>batch_number__c</fullName>
        <label>batch number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>log_link__c</fullName>
        <description>URL for log file</description>
        <label>log link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>log_text__c</fullName>
        <description>Log text</description>
        <label>log text</label>
        <type>TextArea</type>
    </fields>
    <label>Batch Interface</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Batch_Id__c</columns>
        <columns>Job_Id__c</columns>
        <columns>Load_Started_time__c</columns>
        <columns>Load_Startus__c</columns>
        <columns>Run_Time__c</columns>
        <columns>Updated_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <listViews>
        <fullName>CMU_Accounts_Interface</fullName>
        <columns>NAME</columns>
        <columns>Load_Startus__c</columns>
        <columns>Run_Time__c</columns>
        <columns>Error_Message__c</columns>
        <columns>log_text__c</columns>
        <columns>log_link__c</columns>
        <columns>Load_Started_time__c</columns>
        <columns>System_Timestamp__c</columns>
        <columns>Updated_Time__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>CMU - Account</value>
        </filters>
        <label>CMU_Accounts_Interface</label>
    </listViews>
    <listViews>
        <fullName>IDS</fullName>
        <columns>NAME</columns>
        <columns>Batch_Id__c</columns>
        <columns>Job_Id__c</columns>
        <columns>Load_Started_time__c</columns>
        <columns>Load_Startus__c</columns>
        <columns>Run_Time__c</columns>
        <columns>Updated_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interface_Name__c</field>
            <operation>equals</operation>
            <value>IDS</value>
        </filters>
        <label>IDS</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Interface Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Interface</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>